--- a/Data Warehouse/dwh.cfg
+++ b/Data Warehouse/dwh.cfg
@@ -1,12 +1,12 @@
 [CLUSTER]
-HOST='redshift-cluster-1.cog0oupqwzma.us-east-1.redshift.amazonaws.com'
-DB_NAME='dev'
-DB_USER='awsuser'
-DB_PASSWORD='Haipro123'
-DB_PORT='5439'
+HOST=
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
+DB_PORT=
 
 [IAM_ROLE]
-ARN=arn:aws:iam::154580806944:role/myRedshiftRole
+ARN=
 
 [S3]
 LOG_DATA='s3://udacity-dend/log_data'
